default style: make sure tabs dont wrap down at small window widths

--- a/media/css/mediathread.css
+++ b/media/css/mediathread.css
@@ -340,7 +340,7 @@ img, img a
 #primarynav #leftside ul
 {
   float: left;
-  margin-left:80px;
+  margin-left:20px;
 }
 
 #primarynav #rightside ul
